INFRA-997: update extension to work with cleaned MessageHandler annotation