@@ -1,35 +1,38 @@
 package id.global.event.messaging.deployment;
 
 import static id.global.asyncapi.spec.enums.ExchangeType.DIRECT;
-import static id.global.asyncapi.spec.enums.ExchangeType.FANOUT;
-import static id.global.asyncapi.spec.enums.ExchangeType.TOPIC;
 import static id.global.event.messaging.deployment.constants.AnnotationInstanceParams.BINDING_KEYS_PARAM;
 import static id.global.event.messaging.deployment.constants.AnnotationInstanceParams.EXCHANGE_PARAM;
+import static id.global.event.messaging.deployment.constants.AnnotationInstanceParams.EXCHANGE_TYPE_PARAM;
 import static id.global.event.messaging.deployment.constants.AnnotationInstanceParams.QUEUE_PARAM;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.jboss.jandex.AnnotationInstance;
+import org.jboss.jandex.AnnotationValue;
 import org.jboss.jandex.DotName;
 import org.jboss.jandex.IndexView;
+import org.jboss.jandex.Type;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import id.global.asyncapi.spec.annotations.FanoutMessageHandler;
+import id.global.asyncapi.spec.annotations.ConsumedEvent;
 import id.global.asyncapi.spec.annotations.MessageHandler;
-import id.global.asyncapi.spec.annotations.TopicMessageHandler;
+import id.global.asyncapi.spec.enums.ExchangeType;
 import id.global.event.messaging.deployment.validation.AnnotationInstanceValidator;
 import id.global.event.messaging.deployment.validation.ValidationRules;
 
 public class MessageHandlerScanner {
     private static final Logger LOG = LoggerFactory.getLogger(MessageHandlerScanner.class);
     private final DotName DOT_NAME_MESSAGE_HANDLER = DotName.createSimple(MessageHandler.class.getCanonicalName());
-    private final DotName DOT_NAME_FANOUT_MESSAGE_HANDLER = DotName.createSimple(FanoutMessageHandler.class.getCanonicalName());
-    private final DotName DOT_NAME_TOPIC_MESSAGE_HANDLER = DotName.createSimple(TopicMessageHandler.class.getCanonicalName());
+    private final DotName DOT_NAME_CONSUMED_EVENT = DotName.createSimple(ConsumedEvent.class.getCanonicalName());
     private final IndexView index;
 
     public MessageHandlerScanner(IndexView index) {
@@ -39,84 +42,43 @@ public class MessageHandlerScanner {
     public List<MessageHandlerInfoBuildItem> scanMessageHandlerAnnotations() {
 
         final var directAnnotations = index.getAnnotations(DOT_NAME_MESSAGE_HANDLER).stream();
-        final var fanoutAnnotations = index.getAnnotations(DOT_NAME_FANOUT_MESSAGE_HANDLER).stream();
-        final var topicAnnotations = index.getAnnotations(DOT_NAME_TOPIC_MESSAGE_HANDLER).stream();
 
-        return Stream
-                .concat(Stream.concat(scanDirectMessageHandlerAnnotations(directAnnotations),
-                        scanFanoutMessageHandlerAnnotations(fanoutAnnotations)),
-                        scanTopicMessageHandlerAnnotations(topicAnnotations))
-                .collect(Collectors.toList());
-    }
-
-    private Stream<MessageHandlerInfoBuildItem> scanTopicMessageHandlerAnnotations(
-            Stream<AnnotationInstance> topicAnnotations) {
-        return topicAnnotations.filter(isNotSyntheticPredicate()).map(annotationInstance -> {
-            final var validationRules = getValidationRules(true, Set.of(EXCHANGE_PARAM, BINDING_KEYS_PARAM),
-                    Set.of(EXCHANGE_PARAM));
-            final var validator = new AnnotationInstanceValidator(index, validationRules);
-            validator.validate(annotationInstance);
-
-            final var methodInfo = annotationInstance.target().asMethod();
-            final var exchange = annotationInstance.value(EXCHANGE_PARAM).asString();
-            final var bindingKeys = annotationInstance.value(BINDING_KEYS_PARAM).asStringArray();
-            // Implement parsing other parameters if needed here
-
-            return new MessageHandlerInfoBuildItem(
-                    methodInfo.declaringClass(),
-                    methodInfo.parameters().get(0),
-                    methodInfo.name(),
-                    null,
-                    exchange,
-                    bindingKeys,
-                    TOPIC);
-        });
-    }
-
-    private Stream<MessageHandlerInfoBuildItem> scanFanoutMessageHandlerAnnotations(
-            Stream<AnnotationInstance> fanoutAnnotations) {
-        return fanoutAnnotations.filter(isNotSyntheticPredicate()).map(annotationInstance -> {
-            final var validationRules = getValidationRules(Set.of(EXCHANGE_PARAM), Set.of(EXCHANGE_PARAM));
-            final var validator = new AnnotationInstanceValidator(index, validationRules);
-            validator.validate(annotationInstance);
-
-            final var methodInfo = annotationInstance.target().asMethod();
-            final var exchange = annotationInstance.value(EXCHANGE_PARAM).asString();
-            // Implement parsing other parameters if needed here
-
-            return new MessageHandlerInfoBuildItem(
-                    methodInfo.declaringClass(),
-                    methodInfo.parameters().get(0),
-                    methodInfo.name(),
-                    null,
-                    exchange,
-                    null,
-                    FANOUT);
-        });
+        return scanDirectMessageHandlerAnnotations(directAnnotations).collect(Collectors.toList());
     }
 
     private Stream<MessageHandlerInfoBuildItem> scanDirectMessageHandlerAnnotations(
             Stream<AnnotationInstance> directAnnotations) {
         return directAnnotations.filter(isNotSyntheticPredicate()).map(annotationInstance -> {
-            final var validationRules = getValidationRules(Set.of(QUEUE_PARAM), Set.of(QUEUE_PARAM));
+            final var validationRules = getValidationRules(Collections.emptySet(), Collections.emptySet());
             final var validator = new AnnotationInstanceValidator(index, validationRules);
             validator.validate(annotationInstance);
 
-            final var exchange = annotationInstance.value(EXCHANGE_PARAM) != null
-                    ? annotationInstance.value(EXCHANGE_PARAM).asString()
-                    : null;
-            final var queue = annotationInstance.value(QUEUE_PARAM).asString();
-            // Implement parsing other parameters if needed here
-
             final var methodInfo = annotationInstance.target().asMethod();
+            final var methodParameters = methodInfo.parameters();
+
+            final var eventAnnotation = getEventAnnotation(methodParameters, index);
+            final var queue = Optional.ofNullable(eventAnnotation.value(QUEUE_PARAM))
+                    .map(AnnotationValue::asString)
+                    .orElse(null);
+            final var exchange = Optional.ofNullable(eventAnnotation.value(EXCHANGE_PARAM))
+                    .map(AnnotationValue::asString)
+                    .orElse(null);
+            final var exchangeType = Optional.ofNullable(eventAnnotation.value(EXCHANGE_TYPE_PARAM))
+                    .map(AnnotationValue::asString)
+                    .map(ExchangeType::fromType)
+                    .orElse(DIRECT);
+            final var bindingKeys = Optional.ofNullable(eventAnnotation.value(BINDING_KEYS_PARAM))
+                    .map(AnnotationValue::asStringArray)
+                    .orElse(null);
+
             return new MessageHandlerInfoBuildItem(
                     methodInfo.declaringClass(),
                     methodInfo.parameters().get(0),
                     methodInfo.name(),
                     queue,
                     exchange,
-                    null,
-                    DIRECT);
+                    bindingKeys,
+                    exchangeType);
         });
     }
 
@@ -136,5 +98,28 @@ public class MessageHandlerScanner {
                 requiredParams,
                 kebabCaseOnlyParams);
 
+    }
+
+    private AnnotationInstance getEventAnnotation(final List<Type> parameters,
+            final IndexView index) {
+
+        final var consumedEventTypes = parameters.stream()
+                .map(Type::name)
+                .map(index::getClassByName)
+                .filter(Objects::nonNull)
+                .map(classInfo -> classInfo.classAnnotation(DOT_NAME_CONSUMED_EVENT))
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+
+        if (consumedEventTypes.isEmpty()) {
+            throw new IllegalArgumentException("Consumed Event not found");
+        }
+
+        if (consumedEventTypes.size() > 1) {
+            throw new IllegalArgumentException(
+                    "Multiple consumed Events detected. Message handler can only handle one event type.");
+        }
+
+        return consumedEventTypes.get(0);
     }
 }
